ice: init flow director before RDMA (bsc#1247712).

--- a/series.conf
+++ b/series.conf
@@ -52136,6 +52136,7 @@
 	patches.suse/ice-treat-dyn_allowed-only-as-suggestion.patch
 	patches.suse/ice-enable_rdma-devlink-param.patch
 	patches.suse/ice-simplify-VF-MSI-X-managing.patch
+	patches.suse/ice-init-flow-director-before-RDMA.patch
 	patches.suse/net-usb-qmi_wwan-add-Telit-Cinterion-FN990B-composit.patch
 	patches.suse/r8152-add-vendor-device-ID-pair-for-Dell-Alienware-A.patch
 	patches.suse/net-usb-asix_devices-add-FiberGecko-DeviceID.patch
