ice: remove splitting MSI-X between features (bsc#1247712).

--- a/series.conf
+++ b/series.conf
@@ -52130,6 +52130,7 @@
 	patches.suse/coredump-Fixes-core_pipe_limit-sysctl-proc_handler.patch
 	patches.suse/ice-count-combined-queues-using-Rx-Tx-count.patch
 	patches.suse/ice-devlink-PF-MSI-X-max-and-min-parameter.patch
+	patches.suse/ice-remove-splitting-MSI-X-between-features.patch
 	patches.suse/net-usb-qmi_wwan-add-Telit-Cinterion-FN990B-composit.patch
 	patches.suse/r8152-add-vendor-device-ID-pair-for-Dell-Alienware-A.patch
 	patches.suse/net-usb-asix_devices-add-FiberGecko-DeviceID.patch
