ice: count combined queues using Rx/Tx count (bsc#1247712).

--- a/series.conf
+++ b/series.conf
@@ -52128,6 +52128,7 @@
 	patches.suse/iommu-vt-d-Fix-system-hang-on-reboot-f.patch
 	patches.suse/iommu-vt-d-Fix-possible-circular-locking-dependency.patch
 	patches.suse/coredump-Fixes-core_pipe_limit-sysctl-proc_handler.patch
+	patches.suse/ice-count-combined-queues-using-Rx-Tx-count.patch
 	patches.suse/net-usb-qmi_wwan-add-Telit-Cinterion-FN990B-composit.patch
 	patches.suse/r8152-add-vendor-device-ID-pair-for-Dell-Alienware-A.patch
 	patches.suse/net-usb-asix_devices-add-FiberGecko-DeviceID.patch
