ice: Fix signedness bug in ice_init_interrupt_scheme() (bsc#1247712).

--- a/series.conf
+++ b/series.conf
@@ -52140,6 +52140,7 @@
 	patches.suse/net-usb-qmi_wwan-add-Telit-Cinterion-FN990B-composit.patch
 	patches.suse/r8152-add-vendor-device-ID-pair-for-Dell-Alienware-A.patch
 	patches.suse/net-usb-asix_devices-add-FiberGecko-DeviceID.patch
+	patches.suse/ice-Fix-signedness-bug-in-ice_init_interrupt_scheme.patch
 	patches.suse/page_pool-avoid-infinite-loop-to-schedule-delayed-worker.patch
 	patches.suse/can-c_can-Use-of_property_present-to-test-existence-.patch
 	patches.suse/net-pktgen-fix-access-outside-of-user-given-buffer-in-pktg.patch
