--- a/series.conf
+++ b/series.conf
@@ -53239,6 +53239,7 @@
 	patches.suse/HID-quirks-Add-ADATA-XPG-alpha-wireless-mouse-suppor.patch
 	patches.suse/RDMA-rxe-Fix-slab-use-after-free-Read-in-rxe_queue_c.patch
 	patches.suse/irdma-free-iwdev-rf-after-removing-MSI-X.patch
+	patches.suse/ice-irdma-fix-an-off-by-one-in-error-handling-code.patch
 	patches.suse/RDMA-core-Fix-KASAN-slab-use-after-free-Read-in-ib_r.patch
 	patches.suse/ALSA-seq-Fix-delivery-of-UMP-events-to-group-ports.patch
 	patches.suse/ALSA-ump-Fix-a-typo-of-snd_ump_stream_msg_device_inf.patch
