ice, irdma: move interrupts code to irdma (bsc#1247712).

--- a/series.conf
+++ b/series.conf
@@ -7084,6 +7084,7 @@
 	patches.suse/ice-devlink-PF-MSI-X-max-and-min-parameter.patch
 	patches.suse/ice-remove-splitting-MSI-X-between-features.patch
 	patches.suse/ice-get-rid-of-num_lan_msix-field.patch
+	patches.suse/ice-irdma-move-interrupts-code-to-irdma.patch
 	patches.suse/net-usb-qmi_wwan-add-Telit-Cinterion-FN990B-composit.patch
 	patches.suse/net-page_pool-avoid-false-positive-warning-if-NAPI-w.patch
 	patches.suse/r8152-add-vendor-device-ID-pair-for-Dell-Alienware-A.patch
