ice: Fix signedness bug in ice_init_interrupt_scheme() (bsc#1247712).

--- a/series.conf
+++ b/series.conf
@@ -7095,6 +7095,7 @@
 	patches.suse/ice-Don-t-check-device-type-when-checking-GNSS-prese.patch
 	patches.suse/ice-Remove-unnecessary-ice_is_e8xx-functions.patch
 	patches.suse/net-usb-asix_devices-add-FiberGecko-DeviceID.patch
+	patches.suse/ice-Fix-signedness-bug-in-ice_init_interrupt_scheme.patch
 	patches.suse/bnxt_en-Set-NPAR-1.2-support-when-registering-with-f.patch
 	patches.suse/bnxt_en-Refactor-completion-ring-allocation-logic-fo.patch
 	patches.suse/bnxt_en-Refactor-TX-ring-allocation-logic.patch
