--- a/series.conf
+++ b/series.conf
@@ -10577,6 +10577,7 @@
 	patches.suse/dpll-zl3073x-Fetch-invariants-during-probe.patch
 	patches.suse/dpll-zl3073x-Read-DPLL-types-and-pin-properties-from.patch
 	patches.suse/dpll-zl3073x-Register-DPLL-devices-and-pins.patch
+	patches.suse/dpll-zl3073x-Implement-input-pin-selection-in-manual.patch
 	patches.suse/wifi-iwlwifi-Fix-error-code-in-iwl_op_mode_dvm_start.patch
 	patches.suse/net-sched-Restrict-conditions-for-adding-duplicating.patch
 	patches.suse/RDMA-mlx5-Fix-UMR-modifying-of-mkey-page-size.patch
