devlink: avoid param type value translations (jsc#PED-13331).

--- a/series.conf
+++ b/series.conf
@@ -9281,6 +9281,7 @@
 	patches.suse/netfilter-nft_quota-match-correctly-when-the-quota-just-de.patch
 	patches.suse/netfilter-nft_set_pipapo-prevent-overflow-in-lookup-.patch
 	patches.suse/devlink-define-enum-for-attr-types-of-dynamic-attrib.patch
+	patches.suse/devlink-avoid-param-type-value-translations.patch
 	patches.suse/wifi-iwlwifi-Add-missing-MODULE_FIRMWARE-for-Qu-c0-j.patch
 	patches.suse/wifi-mac80211-Add-link-iteration-macro-for-link-data.patch
 	patches.suse/wifi-mac80211-Create-separate-links-for-VLAN-interfa.patch
