--- a/series.conf
+++ b/series.conf
@@ -10574,6 +10574,7 @@
 	patches.suse/dt-bindings-dpll-Add-support-for-Microchip-Azurite-c.patch
 	patches.suse/devlink-Add-support-for-u64-parameters.patch
 	patches.suse/dpll-Add-basic-Microchip-ZL3073x-support.patch
+	patches.suse/dpll-zl3073x-Fetch-invariants-during-probe.patch
 	patches.suse/wifi-iwlwifi-Fix-error-code-in-iwl_op_mode_dvm_start.patch
 	patches.suse/net-sched-Restrict-conditions-for-adding-duplicating.patch
 	patches.suse/RDMA-mlx5-Fix-UMR-modifying-of-mkey-page-size.patch
