--- a/series.conf
+++ b/series.conf
@@ -10571,6 +10571,7 @@
 	patches.suse/bpf-sockmap-Fix-psock-incorrectly-pointing-to-sk.patch
 	patches.suse/net-mana-Handle-Reset-Request-from-MANA-NIC.patch
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
+	patches.suse/dt-bindings-dpll-Add-support-for-Microchip-Azurite-c.patch
 	patches.suse/wifi-iwlwifi-Fix-error-code-in-iwl_op_mode_dvm_start.patch
 	patches.suse/net-sched-Restrict-conditions-for-adding-duplicating.patch
 	patches.suse/RDMA-mlx5-Fix-UMR-modifying-of-mkey-page-size.patch
