netlink: specs: devlink: replace underscores with dashes in names (jsc#PED-13331).

--- a/series.conf
+++ b/series.conf
@@ -10071,6 +10071,7 @@
 	patches.suse/wifi-mac80211-finish-link-init-before-RCU-publish.patch
 	patches.suse/netlink-specs-nfsd-replace-underscores-with-dashes-i.patch
 	patches.suse/netlink-specs-dpll-replace-underscores-with-dashes-i.patch
+	patches.suse/netlink-specs-devlink-replace-underscores-with-dashe.patch
 	patches.suse/netlink-specs-tc-replace-underscores-with-dashes-in-.patch
 	patches.suse/HID-wacom-fix-memory-leak-on-kobject-creation-failur.patch
 	patches.suse/HID-wacom-fix-memory-leak-on-sysfs-attribute-creatio.patch
