netlink: fix policy dump for int with validation callback (jsc#PED-13331).

--- a/series.conf
+++ b/series.conf
@@ -9314,6 +9314,7 @@
 	patches.suse/wifi-mac80211_hwsim-Prevent-tsf-from-setting-if-beac.patch
 	patches.suse/wifi-iwlwifi-pcie-make-sure-to-lock-rxq-read.patch
 	patches.suse/net-ibmveth-Refactored-veth_pool_store-for-better-ma.patch
+	patches.suse/netlink-fix-policy-dump-for-int-with-validation-call.patch
 	patches.suse/Bluetooth-ISO-Fix-not-using-SID-from-adv-report.patch
 	patches.suse/Bluetooth-btusb-Add-new-VID-PID-13d3-3630-for-MT7925.patch
 	patches.suse/Bluetooth-btusb-Add-new-VID-PID-13d3-3584-for-MT7922.patch
