--- a/series.conf
+++ b/series.conf
@@ -10621,6 +10621,7 @@
 	patches.suse/ipv6-prevent-infinite-loop-in-rt6_nlmsg_size.patch
 	patches.suse/ipv6-fix-possible-infinite-loop-in-fib6_info_uses_de.patch
 	patches.suse/ipv6-annotate-data-races-around-rt-fib6_nsiblings.patch
+	patches.suse/dpll-zl3073x-Fix-build-failure.patch
 	patches.suse/selftests-bpf-fix-signedness-bug-in-redir_partial.patch
 	patches.suse/selftests-bpf-Fix-unintentional-switch-case-fall-thr.patch
 	patches.suse/iommu-amd-Fix-geometry.aperture_end-for-V2-tables.patch
