--- a/series.conf
+++ b/series.conf
@@ -28369,6 +28369,7 @@
 	patches.suse/smb-client-avoid-unnecessary-reconnects-when-refreshing-referrals.patch
 	patches.suse/smb-client-improve-purging-of-cached-referrals.patch
 	patches.suse/smb-client-fix-DFS-interlink-failover.patch
+	patches.suse/smb-client-fix-parsing-of-device-numbers.patch
 	patches.suse/usb-typec-ucsi-Add-DATA_RESET-option-of-Connector-Re.patch
 	patches.suse/usb-gadget-uvc-Fix-ERR_PTR-dereference-in-uvc_v4l2.c.patch
 	patches.suse/usb-chipidea-udc-enable-suspend-interrupt-after-usb-.patch
