- dpll: Add basic Microchip ZL3073x support (jsc#PED-13331). - Update config files. - supported.conf: Mark ZL3073X modules supported

--- a/supported.conf
+++ b/supported.conf
@@ -819,6 +819,9 @@
 -				drivers/dma/xilinx/xilinx_dpdma
 				drivers/dma/xilinx/zynqmp_dma
 -				drivers/dma/zx_dma
+				drivers/dpll/zl3073x/zl3073x
+				drivers/dpll/zl3073x/zl3073x_i2c
+				drivers/dpll/zl3073x/zl3073x_spi
 -				drivers/edac/al_mc_edac
 				drivers/edac/amd64_edac						# EDAC driver for all AMD platforms
 -!optional			drivers/edac/aspeed_edac					# armv7hl
