--- a/series.conf
+++ b/series.conf
@@ -10803,6 +10803,7 @@
 	patches.suse/drm-amd-display-Don-t-overwrite-dce60_clk_mgr.patch
 	patches.suse/netpoll-prevent-hanging-NAPI-when-netcons-gets-enabl.patch
 	patches.suse/netlink-avoid-infinite-retry-looping-in-netlink_unic.patch
+	patches.suse/dpll-Make-ZL3073X-invisible.patch
 	patches.suse/ipv6-reject-malicious-packets-in-ipv6_gso_segment.patch
 	patches.suse/net-sched-taprio-enforce-minimum-value-for-picos_per.patch
 	patches.suse/net-packet-fix-a-race-in-packet_set_ring-and-packet_.patch
