--- a/series.conf
+++ b/series.conf
@@ -10808,6 +10808,7 @@
 	patches.suse/net-sched-taprio-enforce-minimum-value-for-picos_per.patch
 	patches.suse/net-packet-fix-a-race-in-packet_set_ring-and-packet_.patch
 	patches.suse/net-sched-mqprio-fix-stack-out-of-bounds-write-in-tc.patch
+	patches.suse/dpll-zl3073x-ZL3073X_I2C-and-ZL3073X_SPI-should-depe.patch
 	patches.suse/ALSA-intel_hdmi-Fix-off-by-one-error-in-__hdmi_lpe_a.patch
 	patches.suse/ALSA-hda-ca0132-Fix-missing-error-handling-in-ca0132.patch
 	patches.suse/ASoC-SOF-amd-acp-loader-Use-GFP_KERNEL-for-DMA-alloc.patch
