sunrpc: fix handling of server side tls alerts (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33498,6 +33498,7 @@
 	patches.suse/ALSA-intel_hdmi-Fix-off-by-one-error-in-__hdmi_lpe_a.patch
 	patches.suse/ALSA-hda-ca0132-Fix-missing-error-handling-in-ca0132.patch
 	patches.suse/gpio-mlxbf2-use-platform_get_irq_optional.patch
+	patches.suse/sunrpc-fix-handling-of-server-side-tls-alerts.patch
 
 	########################################################
 	# end of sorted patches
