NFSv4.1: fix backchannel max_resp_sz verification check (bsc#1247518).

--- a/series.conf
+++ b/series.conf
@@ -24209,6 +24209,7 @@
 	patches.suse/media-cec-cec-api-add-locking-in-cec_release.patch
 	patches.suse/media-cec-core-avoid-recursive-cec_claim_log_addrs.patch
 	patches.suse/media-cec-core-avoid-confusing-transmit-timed-out-me.patch
+	patches.suse/NFSv4.1-fix-backchannel-max_resp_sz-verification-check.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
