NFSv4: Allow FREE_STATEID to clean up delegations (bsc#1246211).

--- a/series.conf
+++ b/series.conf
@@ -50460,6 +50460,7 @@
 	patches.suse/scsi-lpfc-Avoid-potential-ndlp-use-after-free-in-dev.patch
 	patches.suse/vgacon-Add-check-for-vc_origin-address-range-in-vgac.patch
 	patches.suse/ipc-fix-to-protect-IPCS-lookups-using-RCU.patch
+	patches.suse/NFSv4-Allow-FREE_STATEID-to-clean-up-delegations.patch
 	patches.suse/netfilter-nf_set_pipapo_avx2-fix-initial-map-fill.patch
 	patches.suse/clone_private_mnt-make-sure-that-caller-has-CAP_SYS_.patch
 	patches.suse/do_change_type-refuse-to-operate-on-unmounted-not-ou.patch
