NFS: remove revoked delegation from server's delegation list (bsc#1246211).

--- a/series.conf
+++ b/series.conf
@@ -49845,6 +49845,7 @@
 	patches.suse/thermal-intel-int340x-processor-Fix-warning-during-module-unload.patch
 	patches.suse/SUNRPC-Fix-integer-overflow-in-decode_rc_list.patch
 	patches.suse/NFSv4-Prevent-NULL-pointer-dereference-in-nfs42_complete_copies.patch
+	patches.suse/NFS-remove-revoked-delegation-from-server-s-delegation-list.patch
 	patches.suse/gpio-aspeed-Add-the-flush-write-to-ensure-the-write-.patch
 	patches.suse/gpio-aspeed-Use-devm_clk-api-to-manage-clock-source.patch
 	patches.suse/hwmon-tmp513-Add-missing-dependency-on-REGMAP_I2C.patch
