kabi fix for NFSv4: Allow FREE_STATEID to clean up delegations (bsc#1246211).

--- a/series.conf
+++ b/series.conf
@@ -51260,6 +51260,7 @@
 	patches.kabi/ax25-rcu-protect-dev-ax25_ptr.patch
 	patches.kabi/cpufreq-kABI-workaround.patch
 	patches.suse/kabi-fix-for-NFSv4-fairly-test-all-delegations-on-a-SEQ4_-revocation.patch
+	patches.kabi/kabi-fix-for-NFSv4-Allow-FREE_STATEID-to-clean-up-delegations.patch
 
 	########################################################
 	# SLE15-SP3 OOT performance patches evaluated but left
