rcu-tasks: Maintain real-time response in (bsc#1246298)

--- a/series.conf
+++ b/series.conf
@@ -22312,6 +22312,7 @@
 	patches.suse/rcu-tasks-Initialize-data-to-eliminate-RCU-tasks-do_.patch
 	patches.suse/rcu-tasks-Maintain-lists-to-eliminate-RCU-tasks-do_e.patch
 	patches.suse/rcu-tasks-Eliminate-deadlocks-involving-do_exit-and-.patch
+	patches.suse/rcu-tasks-Maintain-real-time-response-in-rcu_tasks_p.patch
 	patches.suse/workqueue-Add-rcu-lock-check-at-the-end-of-work-item-execution.patch
 	patches.suse/timekeeping-Fix-cross-timestamp-interpolation-on-cou.patch
 	patches.suse/timekeeping-Fix-cross-timestamp-interpolation-corner.patch
