--- a/series.conf
+++ b/series.conf
@@ -837,6 +837,7 @@
 	patches.suse/memcg-flush-stats-non-atomically-in-mem_cgroup_wb_stats.patch
 	patches.suse/memcg-calculate-root-usage-from-global-state.patch
 	patches.suse/memcg-remove-mem_cgroup_flush_stats_atomic.patch
+	patches.suse/cgroup-remove-cgroup_rstat_flush_atomic.patch
 	patches.suse/memcg-oom-remove-unnecessary-check-in-mem_cgroup_oom_synchronize.patch
 	patches.suse/memcg-oom-remove-explicit-wakeup-in-mem_cgroup_oom_synchronize.patch
 	patches.suse/fs-hugetlbfs-set-vma-policy-only-when-needed-for-allocating-folio.patch
