--- a/series.conf
+++ b/series.conf
@@ -56,6 +56,9 @@
 	# sorted patches
 	########################################################
 
+	# netdev/net-next main
+	patches.suse/net-cadence-macb-Add-support-for-Raspberry-Pi-RP1-et.patch
+
 	# https://github.com/broadcom/stblinux.git next
 	patches.suse/dt-bindings-clock-rp1-Add-missing-MIPI-DSI-defines.patch
 	patches.suse/clk-rp1-Implement-remaining-clock-tree.patch
