--- a/series.conf
+++ b/series.conf
@@ -59,6 +59,9 @@
 	# netdev/net-next main
 	patches.suse/net-cadence-macb-Add-support-for-Raspberry-Pi-RP1-et.patch
 
+	# linusw/linux-pinctrl for-next
+	patches.suse/pinctrl-rp1-Add-regmap-ranges-to-RP1-gpio-controller.patch
+
 	# https://github.com/broadcom/stblinux.git next
 	patches.suse/dt-bindings-clock-rp1-Add-missing-MIPI-DSI-defines.patch
 	patches.suse/clk-rp1-Implement-remaining-clock-tree.patch
