s390/debug: Split private data alloc/free out of file operations (git-fixes jsc#PED-13260).

--- a/series.conf
+++ b/series.conf
@@ -50663,6 +50663,7 @@
 	patches.suse/s390-diag-Move-diag.c-to-diag-specific-folder.patch
 	patches.suse/s390-pci-Report-PCI-error-recovery-results-via-SCLP.patch
 	patches.suse/s390-debug-Simplify-and-document-debug_next_entry-logic.patch
+	patches.suse/s390-debug-Split-private-data-alloc-free-out-of-file-opera.patch
 	patches.suse/s390-topology-Improve-topology-detection.patch
 	patches.suse/s390-stackleak-Use-exrl-instead-of-ex-in-__stackleak_poison.patch
 	patches.suse/s390-futex-Fix-FUTEX_OP_ANDN-implementation.patch
