--- a/series.conf
+++ b/series.conf
@@ -50664,6 +50664,7 @@
 	patches.suse/s390-pci-Report-PCI-error-recovery-results-via-SCLP.patch
 	patches.suse/s390-debug-Simplify-and-document-debug_next_entry-logic.patch
 	patches.suse/s390-debug-Split-private-data-alloc-free-out-of-file-opera.patch
+	patches.suse/s390-debug-Add-debug_dump-to-write-debug-view-to-a-string-.patch
 	patches.suse/s390-topology-Improve-topology-detection.patch
 	patches.suse/s390-stackleak-Use-exrl-instead-of-ex-in-__stackleak_poison.patch
 	patches.suse/s390-futex-Fix-FUTEX_OP_ANDN-implementation.patch
