s390/pci: Add pci_msg debug view to PCI report (git-fixes jsc#PED-13260).

--- a/series.conf
+++ b/series.conf
@@ -50666,6 +50666,7 @@
 	patches.suse/s390-debug-Split-private-data-alloc-free-out-of-file-opera.patch
 	patches.suse/s390-debug-Add-debug_dump-to-write-debug-view-to-a-string-.patch
 	patches.suse/s390-debug-Add-a-reverse-mode-for-debug_dump.patch
+	patches.suse/s390-pci-Add-pci_msg-debug-view-to-PCI-report.patch
 	patches.suse/s390-topology-Improve-topology-detection.patch
 	patches.suse/s390-stackleak-Use-exrl-instead-of-ex-in-__stackleak_poison.patch
 	patches.suse/s390-futex-Fix-FUTEX_OP_ANDN-implementation.patch
