cgroup: remove per-cpu per-subsystem locks (bsc#1247963).

--- a/series.conf
+++ b/series.conf
@@ -33890,6 +33890,7 @@
 	patches.suse/mm-ptdump-take-the-memory-hotplug-lock-inside-ptdump_walk_.patch
 	patches.suse/cgroup-support-to-enable-nmi-safe-css_rstat_updated.patch
 	patches.suse/cgroup-make-css_rstat_updated-nmi-safe.patch
+	patches.suse/cgroup-remove-per-cpu-per-subsystem-locks.patch
 	patches.suse/HID-core-Harden-s32ton-against-conversion-to-0-bits.patch
 	patches.suse/power-supply-qcom_battmgr-Add-lithium-polymer-entry.patch
 	patches.suse/power-supply-cpcap-charger-Fix-null-check-for-power_.patch
