--- a/series.conf
+++ b/series.conf
@@ -11466,6 +11466,7 @@
 	patches.suse/mm-damon-ops-common-ignore-migration-request-to-inva.patch
 	patches.suse/cgroup-support-to-enable-nmi-safe-css_rstat_updated.patch
 	patches.suse/cgroup-make-css_rstat_updated-nmi-safe.patch
+	patches.suse/cgroup-remove-per-cpu-per-subsystem-locks.patch
 	patches.suse/cgroup-Add-compatibility-option-for-content-of-proc-cgroup.patch
 	patches.suse/smb-client-fix-netns-refcount-leak-after-net_passive-changes.patch
 	patches.suse/HID-apple-validate-feature-report-field-count-to-pre.patch
