--- a/series.conf
+++ b/series.conf
@@ -11465,6 +11465,7 @@
 	patches.suse/mm-swap-fix-potential-buffer-overflow-in-setup_clust.patch
 	patches.suse/mm-damon-ops-common-ignore-migration-request-to-inva.patch
 	patches.suse/cgroup-support-to-enable-nmi-safe-css_rstat_updated.patch
+	patches.suse/cgroup-make-css_rstat_updated-nmi-safe.patch
 	patches.suse/cgroup-Add-compatibility-option-for-content-of-proc-cgroup.patch
 	patches.suse/smb-client-fix-netns-refcount-leak-after-net_passive-changes.patch
 	patches.suse/HID-apple-validate-feature-report-field-count-to-pre.patch
