--- a/series.conf
+++ b/series.conf
@@ -34831,6 +34831,7 @@
 	patches.kabi/truct-dwc3-hide-new-member-wakeup_pending_funcs.patch
 	patches.kabi/kabi-restore-layout-of-struct-cgroup_subsys.patch
 	patches.kabi/kabi-add-struct-cgroup_extra.patch
+	patches.kabi/kabi-restore-layout-of-struct-cgroup_rstat_cpu.patch
 	patches.kabi/xsk-Fix-race-condition-in-AF_XDP-generic-RX-path.patch
 	patches.kabi/struct-cdns-move-new-member-to-the-end.patch
 	patches.kabi/kabi-restore-encap_sk-in-struct-xfrm_state.patch
