kabi: restore layout of struct cgroup_rstat_cpu (bsc#1247963).

--- a/series.conf
+++ b/series.conf
@@ -12860,6 +12860,7 @@
 	patches.kabi/HID-amd_sfh-Add-sync-across-amd-sfh-work-functions.patch
 	patches.kabi/atm-atmtcp-Prevent-arbitrary-write-in-atmtcp_recv_co.patch
 	patches.kabi/writeback-Avoid-contention-on-wb-list_lock-when-swit.patch
+	patches.kabi/cgroup-support-to-enable-nmi-safe-css_rstat_updated.patch
 
 	########################################################
 	# preempt-rt backport converged
