--- a/series.conf
+++ b/series.conf
@@ -19217,6 +19217,7 @@
 	patches.suse/cgroup-Eliminate-the-need-for-cgroup_mutex-in-proc_cgroup_show.patch
 	patches.suse/cgroup-Add-annotation-for-holding-namespace_sem-in-current_cgns_cgroup_from_root.patch
 	patches.suse/cgroup-rstat-Reduce-cpu_lock-hold-time-in-cgroup_rstat_flu.patch
+	patches.suse/cgroup-rstat-Optimize-cgroup_rstat_updated_list.patch
 	patches.suse/dax-kmem-allow-kmem-to-add-memory-with-memmap_on_mem-4eca.patch
 	patches.suse/zram-split-memory-tracking-and-ac-time-tracking.patch
 	patches.suse/memory-failure-use-a-folio-in-me_huge_page.patch
