struct ci_hdrc: new member has_short_pkt_limit to end (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35061,6 +35061,7 @@
 	patches.kabi/kabi-Restore-layout-of-parallel_data.patch
 	patches.kabi/rcu-tasks-kabi-workaround.patch
 	patches.kabi/writeback-Avoid-contention-on-wb-list_lock-when-swit.patch
+	patches.kabi/struct-ci_hdrc-new-member-has_short_pkt_limit-to-end.patch
 
 	########################################################
 	# SLE15-SP3 OOT performance patches evaluated but left
