--- a/series.conf
+++ b/series.conf
@@ -35061,6 +35061,7 @@
 	patches.kabi/kabi-Restore-layout-of-parallel_data.patch
 	patches.kabi/rcu-tasks-kabi-workaround.patch
 	patches.kabi/writeback-Avoid-contention-on-wb-list_lock-when-swit.patch
+	patches.kabi/kABI-arm64-ftrace-restore-init_module.patch
 
 	########################################################
 	# SLE15-SP3 OOT performance patches evaluated but left
