--- a/series.conf
+++ b/series.conf
@@ -11043,6 +11043,7 @@
 	patches.suse/sched-fair-Limit-run-to-parity-to-the-min-slice-of-enqueued-entities.patch
 	patches.suse/sched-fair-Fix-entity-s-lag-with-run-to-parity.patch
 	patches.suse/sched-fair-Always-trigger-resched-at-the-end-of-a-protected-period.patch
+	patches.suse/x86-CPU-AMD-Add-CPUID-faulting-support.patch
 	patches.suse/x86-fpu-Delay-instruction-pointer-fixup-until-after-warnin.patch
 	patches.suse/s390-boot-Use-D__DISABLE_EXPORTS.patch
 	patches.suse/s390-early-Copy-last-breaking-event-address-to-pt_regs.patch
