kabi: Restore layout of parallel_data (bsc1248343).

--- a/series.conf
+++ b/series.conf
@@ -12456,6 +12456,7 @@
 	patches.kabi/drm-dp-Add-an-EDID-quirk-for-the-DPCD-register-acces.patch
 	patches.kabi/kABI-netfs-handle-new-netfs_io_stream-flag.patch
 	patches.kabi/kabi-hide-new-member-allow_subflows-in-struct-mptcp_.patch
+	patches.kabi/kabi-Restore-layout-of-parallel_data.patch
 
 	########################################################
 	# preempt-rt backport converged
