--- a/series.conf
+++ b/series.conf
@@ -34889,6 +34889,7 @@
 	patches.kabi/struct-cdc_ncm_ctx-hide-new-member-filtering_supported.patch
 	patches.kabi/struct-l2cap_chan-shift-new-member-rx_avail-to-end.patch
 	patches.kabi/vsock-virtio-fix-rx_bytes-accounting-for-stream-sock.patch
+	patches.kabi/kabi-Restore-layout-of-parallel_data.patch
 
 	########################################################
 	# SLE15-SP3 OOT performance patches evaluated but left
