iommu/vt-d: Fix __domain_mapping()'s usage of switch_to_super_page() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11950,6 +11950,7 @@
 	patches.suse/ASoC-qcom-q6apm-lpass-dais-Fix-missing-set_fmt-DAI-o.patch
 	patches.suse/crypto-af_alg-Set-merge-to-zero-early-in-af_alg_send.patch
 	patches.suse/mmc-mvsdio-Fix-dma_unmap_sg-nents-value.patch
+	patches.suse/iommu-vt-d-Fix-__domain_mapping-s-usage-of-switch_to.patch
 	patches.suse/btrfs-tree-checker-fix-the-incorrect-inode-ref-size-.patch
 	patches.suse/IB-mlx5-Fix-obj_type-mismatch-for-SRQ-event-subscrip.patch
 	patches.suse/xfrm-xfrm_alloc_spi-shouldn-t-use-0-as-SPI.patch
