Bluetooth: hci_sync: Fix hci_resume_advertising_sync (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34237,6 +34237,7 @@
 	patches.suse/iommu-vt-d-Fix-__domain_mapping-s-usage-of-switch_to.patch
 	patches.suse/btrfs-tree-checker-fix-the-incorrect-inode-ref-size-.patch
 	patches.suse/IB-mlx5-Fix-obj_type-mismatch-for-SRQ-event-subscrip.patch
+	patches.suse/Bluetooth-hci_sync-Fix-hci_resume_advertising_sync.patch
 	patches.suse/xfrm-xfrm_alloc_spi-shouldn-t-use-0-as-SPI.patch
 
 	########################################################
