--- a/series.conf
+++ b/series.conf
@@ -34245,6 +34245,7 @@
 	patches.suse/can-sun4i_can-populate-ndo_change_mtu-to-prevent-buf.patch
 	patches.suse/can-mcba_usb-populate-ndo_change_mtu-to-prevent-buff.patch
 	patches.suse/can-peak_usb-fix-shift-out-of-bounds-issue.patch
+	patches.suse/drm-gma500-Fix-null-dereference-in-hdmi-teardown.patch
 
 	########################################################
 	# end of sorted patches
