--- a/series.conf
+++ b/series.conf
@@ -34180,6 +34180,7 @@
 	patches.suse/compiler-clang.h-define-__SANITIZE_-__-macros-only-w.patch
 	patches.suse/s390-pai-Deny-all-events-not-handled-by-this-PMU.patch
 	patches.suse/s390-cpum_cf-Deny-all-sampling-events-by-counter-PMU.patch
+	patches.suse/net-phy-fix-phy_uses_state_machine.patch
 	patches.suse/can-j1939-implement-NETDEV_UNREGISTER-notification-h.patch
 	patches.suse/can-j1939-j1939_sk_bind-call-j1939_priv_put-immediat.patch
 	patches.suse/can-j1939-j1939_local_ecu_get-undo-increment-when-j1.patch
