--- a/series.conf
+++ b/series.conf
@@ -34219,6 +34219,7 @@
 	patches.suse/KVM-arm64-vgic-fix-incorrect-spinlock-API-usage.patch
 	patches.suse/KVM-SVM-Sync-TPR-from-LAPIC-into-VMCB-V_TPR-even-if-.patch
 	patches.suse/KVM-s390-Fix-incorrect-usage-of-mmu_notifier_register.patch
+	patches.suse/net-rfkill-gpio-Fix-crash-due-to-dereferencering-uni.patch
 	patches.suse/drm-bridge-anx7625-Fix-NULL-pointer-dereference-with.patch
 	patches.suse/drm-bridge-cdns-mhdp8546-Fix-missing-mutex-unlock-on.patch
 	patches.suse/ALSA-hda-realtek-Add-ALC295-Dell-TAS2781-I2C-fixup.patch
