ALSA: hda/realtek: Fix mute led for HP Laptop 15-dw4xx (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34231,6 +34231,7 @@
 	patches.suse/ASoC-qcom-q6apm-lpass-dais-Fix-NULL-pointer-derefere.patch
 	patches.suse/ASoC-qcom-audioreach-Fix-lpaif_type-configuration-fo.patch
 	patches.suse/ASoC-qcom-q6apm-lpass-dais-Fix-missing-set_fmt-DAI-o.patch
+	patches.suse/ALSA-hda-realtek-Fix-mute-led-for-HP-Laptop-15-dw4xx.patch
 	patches.suse/crypto-af_alg-Set-merge-to-zero-early-in-af_alg_send.patch
 	patches.suse/mmc-mvsdio-Fix-dma_unmap_sg-nents-value.patch
 	patches.suse/iommu-vt-d-Fix-__domain_mapping-s-usage-of-switch_to.patch
