--- a/series.conf
+++ b/series.conf
@@ -33433,6 +33433,7 @@
 	patches.suse/mmc-bcm2835-Fix-dma_unmap_sg-nents-value.patch
 	patches.suse/memstick-core-Zero-initialize-id_reg-in-h_memstick_r.patch
 	patches.suse/phy-tegra-xusb-Fix-unbalanced-regulator-disable-in-U.patch
+	patches.suse/dmaengine-mediatek-Fix-a-flag-reuse-error-in-mtk_cqd.patch
 	patches.suse/dmaengine-nbpfaxi-Fix-memory-corruption-in-probe.patch
 	patches.suse/soundwire-amd-fix-for-clearing-command-status-regist.patch
 	patches.suse/ASoC-amd-yc-add-DMI-quirk-for-ASUS-M6501RM.patch
