fbcon: Fix OOB access in font allocation (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34247,6 +34247,7 @@
 	patches.suse/can-peak_usb-fix-shift-out-of-bounds-issue.patch
 	patches.suse/drm-gma500-Fix-null-dereference-in-hdmi-teardown.patch
 	patches.suse/fbcon-fix-integer-overflow-in-fbcon_do_set_font.patch
+	patches.suse/fbcon-Fix-OOB-access-in-font-allocation.patch
 
 	########################################################
 	# end of sorted patches
