drm/panthor: Defer scheduler entitiy destruction to queue release (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55406,6 +55406,7 @@
 	patches.suse/btrfs-tree-checker-fix-the-incorrect-inode-ref-size-.patch
 	patches.suse/IB-mlx5-Fix-obj_type-mismatch-for-SRQ-event-subscrip.patch
 	patches.suse/drm-ast-Use-msleep-instead-of-mdelay-for-edid-read.patch
+	patches.suse/drm-panthor-Defer-scheduler-entitiy-destruction-to-q.patch
 
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
