can: peak_usb: fix shift-out-of-bounds issue (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11968,6 +11968,7 @@
 	patches.suse/can-hi311x-populate-ndo_change_mtu-to-prevent-buffer.patch
 	patches.suse/can-sun4i_can-populate-ndo_change_mtu-to-prevent-buf.patch
 	patches.suse/can-mcba_usb-populate-ndo_change_mtu-to-prevent-buff.patch
+	patches.suse/can-peak_usb-fix-shift-out-of-bounds-issue.patch
 
 	########################################################
 	# end of sorted patches
