--- a/series.conf
+++ b/series.conf
@@ -11973,6 +11973,7 @@
 	patches.suse/drm-gma500-Fix-null-dereference-in-hdmi-teardown.patch
 	patches.suse/fbcon-fix-integer-overflow-in-fbcon_do_set_font.patch
 	patches.suse/drm-panthor-Defer-scheduler-entitiy-destruction-to-q.patch
+	patches.suse/gpiolib-Extend-software-node-support-to-support-seco.patch
 
 	########################################################
 	# end of sorted patches
