--- a/series.conf
+++ b/series.conf
@@ -11805,6 +11805,7 @@
 	patches.suse/x86-mm-64-define-ARCH_PAGE_TABLE_SYNC_MASK-and-arch_.patch
 	patches.suse/ALSA-usb-audio-Add-mute-TLV-for-playback-volumes-on-.patch
 	patches.suse/ALSA-hda-realtek-Fix-headset-mic-for-TongFang-X6-AF-.patch
+	patches.suse/ALSA-firewire-motu-drop-EPOLLOUT-from-poll-return-va.patch
 	patches.suse/ALSA-usb-audio-Allow-Focusrite-devices-to-use-low-sa.patch
 	patches.suse/ALSA-hda-hdmi-Add-pin-fix-for-another-HP-EliteDesk-8.patch
 	patches.suse/arm64-dts-imx8mp-tqma8mpql-fix-LDO5-power-off.patch
