reset: eyeq: fix OF node leak (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11960,6 +11960,7 @@
 	patches.suse/firewire-core-fix-overlooked-update-of-subsystem-ABI.patch
 	patches.suse/btrfs-tree-checker-fix-the-incorrect-inode-ref-size-.patch
 	patches.suse/IB-mlx5-Fix-obj_type-mismatch-for-SRQ-event-subscrip.patch
+	patches.suse/reset-eyeq-fix-OF-node-leak.patch
 	patches.suse/xfrm-xfrm_alloc_spi-shouldn-t-use-0-as-SPI.patch
 
 	########################################################
