--- a/series.conf
+++ b/series.conf
@@ -11816,6 +11816,7 @@
 	patches.suse/arm64-dts-rockchip-Fix-Bluetooth-interrupts-flag-on-Neardi.patch
 	patches.suse/wifi-cfg80211-fix-use-after-free-in-cmp_bss.patch
 	patches.suse/wifi-brcmfmac-fix-use-after-free-when-rescheduling-b.patch
+	patches.suse/wifi-mac80211-fix-incorrect-type-for-ret.patch
 	patches.suse/wifi-mwifiex-Initialize-the-chan_stats-array-to-zero.patch
 	patches.suse/wifi-mt76-mt7996-Initialize-hdr-before-passing-to-sk.patch
 	patches.suse/wifi-mt76-mt7925-fix-locking-in-mt7925_change_vif_li.patch
