Bluetooth: hci_event: Fix UAF in hci_acl_create_conn_sync (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11962,6 +11962,7 @@
 	patches.suse/IB-mlx5-Fix-obj_type-mismatch-for-SRQ-event-subscrip.patch
 	patches.suse/reset-eyeq-fix-OF-node-leak.patch
 	patches.suse/Bluetooth-hci_sync-Fix-hci_resume_advertising_sync.patch
+	patches.suse/Bluetooth-hci_event-Fix-UAF-in-hci_acl_create_conn_s.patch
 	patches.suse/xfrm-xfrm_alloc_spi-shouldn-t-use-0-as-SPI.patch
 
 	########################################################
