drm/panthor: Defer scheduler entitiy destruction to queue release (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11972,6 +11972,7 @@
 	patches.suse/drm-ast-Use-msleep-instead-of-mdelay-for-edid-read.patch
 	patches.suse/drm-gma500-Fix-null-dereference-in-hdmi-teardown.patch
 	patches.suse/fbcon-fix-integer-overflow-in-fbcon_do_set_font.patch
+	patches.suse/drm-panthor-Defer-scheduler-entitiy-destruction-to-q.patch
 
 	########################################################
 	# end of sorted patches
