--- a/series.conf
+++ b/series.conf
@@ -11937,6 +11937,7 @@
 	patches.suse/KVM-arm64-vgic-fix-incorrect-spinlock-API-usage.patch
 	patches.suse/KVM-s390-Fix-access-to-unavailable-adapter-indicator-pages.patch
 	patches.suse/KVM-s390-Fix-incorrect-usage-of-mmu_notifier_register.patch
+	patches.suse/net-rfkill-gpio-Fix-crash-due-to-dereferencering-uni.patch
 	patches.suse/drm-bridge-anx7625-Fix-NULL-pointer-dereference-with.patch
 	patches.suse/drm-bridge-cdns-mhdp8546-Fix-missing-mutex-unlock-on.patch
 	patches.suse/drm-xe-tile-Release-kobject-for-the-failure-path.patch
