fbcon: fix integer overflow in fbcon_do_set_font (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11971,6 +11971,7 @@
 	patches.suse/can-peak_usb-fix-shift-out-of-bounds-issue.patch
 	patches.suse/drm-ast-Use-msleep-instead-of-mdelay-for-edid-read.patch
 	patches.suse/drm-gma500-Fix-null-dereference-in-hdmi-teardown.patch
+	patches.suse/fbcon-fix-integer-overflow-in-fbcon_do_set_font.patch
 
 	########################################################
 	# end of sorted patches
