platform/x86: lg-laptop: Fix WMAB call in fan_mode_store() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11974,6 +11974,7 @@
 	patches.suse/fbcon-fix-integer-overflow-in-fbcon_do_set_font.patch
 	patches.suse/drm-panthor-Defer-scheduler-entitiy-destruction-to-q.patch
 	patches.suse/gpiolib-Extend-software-node-support-to-support-seco.patch
+	patches.suse/platform-x86-lg-laptop-Fix-WMAB-call-in-fan_mode_sto.patch
 
 	########################################################
 	# end of sorted patches
