--- a/series.conf
+++ b/series.conf
@@ -11970,6 +11970,7 @@
 	patches.suse/can-mcba_usb-populate-ndo_change_mtu-to-prevent-buff.patch
 	patches.suse/can-peak_usb-fix-shift-out-of-bounds-issue.patch
 	patches.suse/drm-ast-Use-msleep-instead-of-mdelay-for-edid-read.patch
+	patches.suse/drm-gma500-Fix-null-dereference-in-hdmi-teardown.patch
 
 	########################################################
 	# end of sorted patches
