--- a/series.conf
+++ b/series.conf
@@ -11963,6 +11963,7 @@
 	patches.suse/reset-eyeq-fix-OF-node-leak.patch
 	patches.suse/Bluetooth-hci_sync-Fix-hci_resume_advertising_sync.patch
 	patches.suse/Bluetooth-hci_event-Fix-UAF-in-hci_acl_create_conn_s.patch
+	patches.suse/Bluetooth-MGMT-Fix-possible-UAFs.patch
 	patches.suse/xfrm-xfrm_alloc_spi-shouldn-t-use-0-as-SPI.patch
 	patches.suse/can-etas_es58x-populate-ndo_change_mtu-to-prevent-bu.patch
 	patches.suse/can-hi311x-populate-ndo_change_mtu-to-prevent-buffer.patch
