--- a/series.conf
+++ b/series.conf
@@ -19206,6 +19206,7 @@
 	patches.suse/perf-x86-intel-uncore-Support-Sierra-Forest-and-Grand-Ridge.patch
 	patches.suse/perf-x86-intel-uncore-Fix-NULL-pointer-dereference-issue-in-upi_fill_topology.patch
 	patches.suse/perf-x86-intel-uncore-Factor-out-topology_gidnid_map.patch
+	patches.suse/sched-deadline-Collect-sched_dl_entity-initializatio.patch
 	patches.suse/sched-topology-Add-a-new-arch_scale_freq_ref-method.patch
 	patches.suse/cpufreq-Use-the-fixed-and-coherent-frequency-for-scaling-capacity.patch
 	patches.suse/cpufreq-cppc-Move-and-rename-cppc_cpufreq_-perf_to_khz-khz_to_perf.patch
