--- a/series.conf
+++ b/series.conf
@@ -22359,6 +22359,7 @@
 	patches.suse/RAS-AMD-FMPM-Add-debugfs-interface-to-print-record-entries.patch
 	patches.suse/RAS-AMD-FMPM-Fix-off-by-one-when-unwinding-on-error.patch
 	patches.suse/sched-fair-Take-the-scheduling-domain-into-account-i.patch
+	patches.suse/sched-fair-Remove-unused-parameter-from-sched_asym.patch
 	patches.suse/x86-nmi-Drop-unused-declaration-of-proc_nmi_enabled.patch
 	patches.suse/x86-Increase-brk-randomness-entropy-for-64-bit-systems.patch
 	patches.suse/x86-mm-Ensure-input-to-pfn_to_kaddr-is-treated-as-a-64-bit.patch
