sched/numa, mm: do not try to migrate memory to memoryless (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -23439,6 +23439,7 @@
 	patches.suse/0005-mm-page_owner-Display-all-stacks-and-their-count.patch
 	patches.suse/0006-mm-page_owner-Filter-out-stacks-by-a-threshold.patch
 	patches.suse/0007-mm-page_owner-Update-Documentation-regarding-page_ow.patch
+	patches.suse/sched-numa-mm-do-not-try-to-migrate-memory-to-memory.patch
 	patches.suse/modules-wait-do_free_init-correctly.patch
 	patches.suse/mm-swap-fix-race-between-free_swap_and_cache-and-swapoff.patch
 	patches.suse/0001-mm-page_owner-check-for-null-stack_record-before-bum.patch
