sched/isolation: Fix boot crash when maxcpus < first (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -24595,6 +24595,7 @@
 	patches.suse/x86-sev-Check-for-MWAITX-and-MONITORX-opcodes-in-the-VC-ha.patch
 	patches.suse/x86-CPU-AMD-Add-models-0x10-0x1f-to-the-Zen5-range.patch
 	patches.suse/x86-tdx-Preserve-shared-bit-on-mprotect.patch
+	patches.suse/sched-isolation-Fix-boot-crash-when-maxcpus-first-ho.patch
 	patches.suse/SUNRPC-add-a-missing-rpc_stat-for-TCP-TLS.patch
 	patches.suse/nfs-Handle-error-of-rpc_proc_register-in-nfs_net_ini.patch
 	patches.suse/pinctrl-pinctrl-aspeed-g6-Fix-register-offset-for-pi.patch
