i2c: riic: Allow setting frequencies lower than 50KHz (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34250,6 +34250,7 @@
 	patches.suse/drm-gma500-Fix-null-dereference-in-hdmi-teardown.patch
 	patches.suse/fbcon-fix-integer-overflow-in-fbcon_do_set_font.patch
 	patches.suse/fbcon-Fix-OOB-access-in-font-allocation.patch
+	patches.suse/i2c-riic-Allow-setting-frequencies-lower-than-50KHz.patch
 
 	########################################################
 	# end of sorted patches
