blacklist.conf: We do not need these
4a1e3bf61fc78ad100018adb573355303915dca3 # New feature
d4f610a9bafdec8e3210789aa19335367da696ea # Do not enable by default during compile testing
a374f28700abd20e8a7d026f89aa26f759445918 # fix compile-test defaults

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -530,3 +530,6 @@ acece9d1ca9283154cc4fcc778579059119ccb90 # for debugging, no fix
 88c7c56d07c108ed4de319c8dba44aa4b8a38dd1 # amdgpu: cherry-picked
 a5d258a00b41143d9c64880eed35799d093c4782 # amdgpu: reverting the above
 a5fb3ff632876d63ee1fc5ed3af2464240145a00 # this breaks kABI indirectly
+4a1e3bf61fc78ad100018adb573355303915dca3 # New feature
+d4f610a9bafdec8e3210789aa19335367da696ea # Do not enable by default during compile testing
+a374f28700abd20e8a7d026f89aa26f759445918 # fix compile-test defaults
