--- a/series.conf
+++ b/series.conf
@@ -6924,6 +6924,7 @@
 	patches.suse/cpufreq-governor-Fix-negative-idle_time-handling-in-dbs_update.patch
 	patches.suse/cpufreq-scpi-compare-kHz-instead-of-Hz.patch
 	patches.suse/cpufreq-amd-pstate-Remove-unnecessary-driver_lock-in-set_boost.patch
+	patches.suse/cpufreq-tegra186-Share-policy-per-cluster.patch
 	patches.suse/cpuidle-menu-Drop-a-redundant-local-variable.patch
 	patches.suse/cpuidle-menu-Use-one-loop-for-average-and-variance-computations.patch
 	patches.suse/cpuidle-menu-Tweak-threshold-use-in-get_typical_interval.patch
