--- a/series.conf
+++ b/series.conf
@@ -11191,6 +11191,7 @@
 	patches.suse/iommu-arm-smmu-qcom-Add-SM6115-MDSS-compatible.patch
 	patches.suse/rcu-Protect-defer_qs_iw_pending-from-data-race.patch
 	patches.suse/rcu-Fix-rcu_read_unlock-deadloop-due-to-IRQ-work.patch
+	patches.suse/PM-cpufreq-powernv-tracing-Move-powernv_throttle-trace-event.patch
 	patches.suse/xen-fix-UAF-in-dmabuf_exp_from_pages.patch
 	patches.suse/xen-gntdev-remove-struct-gntdev_copy_batch-from-stac.patch
 	patches.suse/xen-netfront-Fix-TX-response-spurious-interrupts.patch
