--- a/series.conf
+++ b/series.conf
@@ -11956,6 +11956,7 @@
 	patches.suse/iommu-vt-d-Fix-__domain_mapping-s-usage-of-switch_to.patch
 	patches.suse/btrfs-tree-checker-fix-the-incorrect-inode-ref-size-.patch
 	patches.suse/IB-mlx5-Fix-obj_type-mismatch-for-SRQ-event-subscrip.patch
+	patches.suse/cpufreq-Initialize-cpufreq-based-invariance-before-subsys.patch
 	patches.suse/xfrm-xfrm_alloc_spi-shouldn-t-use-0-as-SPI.patch
 
 	########################################################
