--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1140,3 +1140,6 @@ c94bff63e49302d4ce36502a85a2710a67332a4f # removing exported symbol
 e7dec0b7926f3cd493c697c4c389df77e8e8a34c # doesn't fix anything
 7278a8fb8d032dfdc03d9b5d17e0bc451cdc1492 # inconsequential optimization
 772e5b4a5e8360743645b9a466842d16092c4f94 # CVE-2025-39775 https://bugzilla.suse.com/show_bug.cgi?id=1249500#c2
+64e018d7a8990c11734704a0767c47fd8efd5388 # Must not build as module, reverted again later
+4a1e3bf61fc78ad100018adb573355303915dca3 # New feature
+fc5414a4774e14e51a93499a6adfdc45f2de82e0 # New HW, others also already missing
