cpufreq: tegra186: Share policy per cluster (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -31511,6 +31511,7 @@
 	patches.suse/pm-cpupower-bench-Prevent-NULL-dereference-on-malloc.patch
 	patches.suse/cpufreq-governor-Fix-negative-idle_time-handling-in-dbs_update.patch
 	patches.suse/cpufreq-scpi-compare-kHz-instead-of-Hz.patch
+	patches.suse/cpufreq-tegra186-Share-policy-per-cluster.patch
 	patches.suse/PM-sleep-Adjust-check-before-setting-power.must_resu.patch
 	patches.suse/PM-sleep-Fix-handling-devices-with-direct_complete-s.patch
 	patches.suse/thermal-int340x-Add-NULL-check-for-adev.patch
