--- a/series.conf
+++ b/series.conf
@@ -84,6 +84,7 @@
 	# to area specific sections below.
 	########################################################
 	patches.suse/firmware-qemu_fw_cfg-Do-not-hard-depend-on-CONFIG_HA.patch
+	patches.suse/docs-kdoc-handle-the-obsolescensce-of-docutils.Error.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
