blacklist.conf: Add 82a0302e7167 padata: Remove comment for reorder_work

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -541,3 +541,4 @@ a374f28700abd20e8a7d026f89aa26f759445918 # fix compile-test defaults
 c4484ab86ee00f2d9236e2851621ea02c105f4cc # feature (new and renamed trace events)
 68b6dbf1f441c4eba3b8511728a41cf9b01dca35 # feature (new trace event)
 7e2368a21741e2db542330b32aa6fdd8908e7cff # debugging feature
+82a0302e7167d0b7c6cde56613db3748f8dd806d # comment only
