drm/ast: Use msleep instead of mdelay for edid read (bsc#1250530).

--- a/series.conf
+++ b/series.conf
@@ -34251,6 +34251,7 @@
 	patches.suse/can-sun4i_can-populate-ndo_change_mtu-to-prevent-buf.patch
 	patches.suse/can-mcba_usb-populate-ndo_change_mtu-to-prevent-buff.patch
 	patches.suse/can-peak_usb-fix-shift-out-of-bounds-issue.patch
+	patches.suse/drm-ast-Use-msleep-instead-of-mdelay-for-edid-read.patch
 	patches.suse/drm-gma500-Fix-null-dereference-in-hdmi-teardown.patch
 	patches.suse/fbcon-fix-integer-overflow-in-fbcon_do_set_font.patch
 	patches.suse/fbcon-Fix-OOB-access-in-font-allocation.patch
