--- a/series.conf
+++ b/series.conf
@@ -750,6 +750,7 @@
 	patches.suse/sfc-implement-per-queue-rx-drop-and-overrun-stats.patch
 	patches.suse/sfc-implement-per-queue-TSO-hw_gso-stats.patch
 	patches.suse/sfc-add-per-queue-RX-bytes-stats.patch
+	patches.suse/msft-hv-3107-hv_netvsc-Link-queues-to-NAPIs.patch
 	patches.suse/lib-packing-catch-kunit_kzalloc-failure-in-the-pack-.patch
 	patches.suse/ipv4-remove-fib_devindex_hashfn.patch
 	patches.suse/ipv4-use-rcu-in-ip_fib_check_default.patch
