--- a/series.conf
+++ b/series.conf
@@ -32669,6 +32669,7 @@
 	patches.suse/crypto-xts-Only-add-ecb-if-it-is-not-already-there.patch
 	patches.suse/crypto-sun8i-ce-move-fallback-ahash_request-to-the-e.patch
 	patches.suse/crypto-marvell-cesa-Do-not-chain-submitted-requests.patch
+	patches.suse/selftests-cpufreq-Fix-cpufreq-basic-read-and-update-.patch
 	patches.suse/s390-pci-Fix-__pcilg_mio_inuser-inline-assembly.patch
 	patches.suse/s390-pci-remove-redundant-bus-removal-and-disable-from-zpci_release_device.patch
 	patches.suse/s390-pci-prevent-self-deletion-in-disable_slot.patch
