selftests/cpufreq: Fix cpufreq basic read and update testcases (bsc#1250344).

--- a/series.conf
+++ b/series.conf
@@ -9192,6 +9192,7 @@
 	patches.suse/crypto-sun8i-ce-move-fallback-ahash_request-to-the-e.patch
 	patches.suse/crypto-marvell-cesa-Do-not-chain-submitted-requests.patch
 	patches.suse/crypto-api-Redo-lookup-on-EEXIST.patch
+	patches.suse/selftests-cpufreq-Fix-cpufreq-basic-read-and-update-.patch
 	patches.suse/kselftest-cpufreq-Get-rid-of-double-suspend-in-rtcwa.patch
 	patches.suse/selftests-run_kselftest.sh-Use-readlink-if-realpath-.patch
 	patches.suse/s390-pci-Fix-__pcilg_mio_inuser-inline-assembly.patch
