kABI workaround for amd_sfh (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12459,6 +12459,7 @@
 	patches.kabi/drm-dp-Add-an-EDID-quirk-for-the-DPCD-register-acces.patch
 	patches.kabi/kABI-netfs-handle-new-netfs_io_stream-flag.patch
 	patches.kabi/kabi-hide-new-member-allow_subflows-in-struct-mptcp_.patch
+	patches.kabi/HID-amd_sfh-Add-sync-across-amd-sfh-work-functions.patch
 
 	########################################################
 	# preempt-rt backport converged
