--- a/series.conf
+++ b/series.conf
@@ -11994,6 +11994,7 @@
 	patches.suse/drm-panthor-Defer-scheduler-entitiy-destruction-to-q.patch
 	patches.suse/gpiolib-Extend-software-node-support-to-support-seco.patch
 	patches.suse/platform-x86-lg-laptop-Fix-WMAB-call-in-fan_mode_sto.patch
+	patches.suse/i2c-riic-Allow-setting-frequencies-lower-than-50KHz.patch
 	patches.suse/erofs-avoid-reading-more-for-fragment-maps.patch
 	patches.suse/seccomp-Fix-a-race-with-WAIT_KILLABLE_RECV-if-the-tracer-r.patch
 	patches.suse/btrfs-return-any-hit-error-from-extent_writepage_io.patch
