platform/x86: asus-wmi: Fix ROG button mapping, tablet mode on ASUS ROG Z13 (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11861,6 +11861,7 @@
 	patches.suse/drm-amd-display-Clear-the-CUR_ENABLE-register-on-DCN.patch
 	patches.suse/drm-amd-amdgpu-Fix-missing-error-return-on-kzalloc-f.patch
 	patches.suse/platform-x86-asus-wmi-Remove-extra-keys-from-ignore_.patch
+	patches.suse/platform-x86-asus-wmi-Fix-ROG-button-mapping-tablet-.patch
 	patches.suse/platform-x86-amd-pmc-Add-TUXEDO-IB-Pro-Gen10-AMD-to-.patch
 	patches.suse/platform-x86-intel-power-domains-Use-topology_logica.patch
 	patches.suse/hwmon-mlxreg-fan-Prevent-fans-from-getting-stuck-at-.patch
