tty: hvc_console: Call hvc_kick in hvc_write unconditionally (bsc#1230062).

--- a/series.conf
+++ b/series.conf
@@ -34210,6 +34210,7 @@
 	patches.suse/USB-serial-option-add-Telit-Cinterion-FN990A-w-audio.patch
 	patches.suse/USB-serial-option-add-Telit-Cinterion-LE910C4-WWX-ne.patch
 	patches.suse/serial-sc16is7xx-fix-bug-in-flow-control-levels-init.patch
+	patches.suse/tty-hvc_console-Call-hvc_kick-in-hvc_write-unconditio.patch
 	patches.suse/dmaengine-qcom-bam_dma-Fix-DT-error-handling-for-num.patch
 	patches.suse/dmaengine-idxd-Remove-improper-idxd_free.patch
 	patches.suse/dmaengine-idxd-Fix-refcount-underflow-on-module-unlo.patch
