seccomp: Fix a race with WAIT_KILLABLE_RECV if the tracer replies too fast (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34257,6 +34257,7 @@
 	patches.suse/fbcon-fix-integer-overflow-in-fbcon_do_set_font.patch
 	patches.suse/fbcon-Fix-OOB-access-in-font-allocation.patch
 	patches.suse/i2c-riic-Allow-setting-frequencies-lower-than-50KHz.patch
+	patches.suse/seccomp-Fix-a-race-with-WAIT_KILLABLE_RECV-if-the-tr.patch
 
 	########################################################
 	# end of sorted patches
