--- a/blacklist.conf
+++ b/blacklist.conf
@@ -530,3 +530,4 @@ acece9d1ca9283154cc4fcc778579059119ccb90 # for debugging, no fix
 88c7c56d07c108ed4de319c8dba44aa4b8a38dd1 # amdgpu: cherry-picked
 a5d258a00b41143d9c64880eed35799d093c4782 # amdgpu: reverting the above
 a5fb3ff632876d63ee1fc5ed3af2464240145a00 # this breaks kABI indirectly
+4f8ab96146065974c63a0c57fe76367a9ba9a305 # this is a prep for (unneeded) bandwidth controller
