--- a/series.conf
+++ b/series.conf
@@ -11978,6 +11978,7 @@
 	patches.suse/drm-panthor-Defer-scheduler-entitiy-destruction-to-q.patch
 	patches.suse/gpiolib-Extend-software-node-support-to-support-seco.patch
 	patches.suse/platform-x86-lg-laptop-Fix-WMAB-call-in-fan_mode_sto.patch
+	patches.suse/seccomp-Fix-a-race-with-WAIT_KILLABLE_RECV-if-the-tracer-r.patch
 
 	########################################################
 	# end of sorted patches
