--- a/series.conf
+++ b/series.conf
@@ -11797,6 +11797,7 @@
 	patches.suse/sched-deadline-Always-stop-dl-server-before-changing.patch
 	patches.suse/sched-deadline-Fix-RT-task-potential-starvation-when.patch
 	patches.suse/sched-deadline-Don-t-count-nr_running-for-dl_server-.patch
+	patches.suse/x86-microcode-AMD-Handle-the-case-of-no-BIOS-microcode.patch
 	patches.suse/btrfs-fix-race-between-logging-inode-and-checking-if.patch
 	patches.suse/btrfs-fix-race-between-setting-last_dir_index_offset.patch
 	patches.suse/btrfs-avoid-load-store-tearing-races-when-checking-i.patch
