--- a/series.conf
+++ b/series.conf
@@ -6756,6 +6756,7 @@
 	patches.suse/x86-amd_node-platform-x86-amd-hsmp-Have-HSMP-use-SMN-throu.patch
 	patches.suse/x86-amd_node-Add-SMN-offsets-to-exclusive-region-access.patch
 	patches.suse/x86-amd_node-Add-support-for-debugfs-access-to-SMN-registe.patch
+	patches.suse/x86-microcode-Update-the-Intel-processor-flag-scan-check.patch
 	patches.suse/x86-smpboot-Fix-INIT-delay-assignment-for-extended-Intel-F.patch
 	patches.suse/x86-headers-Replace-__ASSEMBLY__-with-__ASSEMBLER__-in-UAP.patch
 	patches.suse/zstd-Increase-DYNAMIC_BMI2-GCC-version-cutoff-from-4.patch
