btrfs: return any hit error from extent_writepage_io() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11979,6 +11979,7 @@
 	patches.suse/gpiolib-Extend-software-node-support-to-support-seco.patch
 	patches.suse/platform-x86-lg-laptop-Fix-WMAB-call-in-fan_mode_sto.patch
 	patches.suse/seccomp-Fix-a-race-with-WAIT_KILLABLE_RECV-if-the-tracer-r.patch
+	patches.suse/btrfs-return-any-hit-error-from-extent_writepage_io.patch
 
 	########################################################
 	# end of sorted patches
