--- a/blacklist.conf
+++ b/blacklist.conf
@@ -530,3 +530,7 @@ acece9d1ca9283154cc4fcc778579059119ccb90 # for debugging, no fix
 88c7c56d07c108ed4de319c8dba44aa4b8a38dd1 # amdgpu: cherry-picked
 a5d258a00b41143d9c64880eed35799d093c4782 # amdgpu: reverting the above
 a5fb3ff632876d63ee1fc5ed3af2464240145a00 # this breaks kABI indirectly
+3afff779a725cba914e6caba360b696ae6f90249 # feature (new trace argument), and a buggy one, too
+c4484ab86ee00f2d9236e2851621ea02c105f4cc # feature (new and renamed trace events)
+68b6dbf1f441c4eba3b8511728a41cf9b01dca35 # feature (new trace event)
+7e2368a21741e2db542330b32aa6fdd8908e7cff # debugging feature
