--- a/series.conf
+++ b/series.conf
@@ -23732,6 +23732,7 @@
 	patches.suse/thunderbolt-Fix-rollback-in-tb_port_lane_bonding_ena.patch
 	patches.suse/thunderbolt-Reset-only-non-USB4-host-routers-in-resu.patch
 	patches.suse/thunderbolt-Improve-DisplayPort-tunnel-setup-process.patch
+	patches.suse/xhci-retry-Stop-Endpoint-on-buggy-NEC-controllers.patch
 	patches.suse/usb-xhci-Add-error-handling-in-xhci_map_urb_for_dma.patch
 	patches.suse/usb-typec-ucsi-Clean-up-UCSI_CABLE_PROP-macros.patch
 	patches.suse/usb-dwc3-am62-fix-module-unload-reload-behavior.patch
