--- a/series.conf
+++ b/series.conf
@@ -29781,6 +29781,7 @@
 	patches.suse/xhci-Don-t-perform-Soft-Retry-for-Etron-xHCI-host.patch
 	patches.suse/xhci-pci-Use-standard-pattern-for-device-IDs.patch
 	patches.suse/xhci-pci-Fix-indentation-in-the-PCI-device-ID-defini.patch
+	patches.suse/usb-xhci-Limit-Stop-Endpoint-retries.patch
 	patches.suse/usb-xhci-Fix-TD-invalidation-under-pending-Set-TR-De.patch
 	patches.suse/usb-typec-ucsi-glink-fix-off-by-one-in-connector_sta.patch
 	patches.suse/usb-musb-Fix-hardware-lockup-on-first-Rx-endpoint-re.patch
