--- a/series.conf
+++ b/series.conf
@@ -29783,6 +29783,7 @@
 	patches.suse/xhci-pci-Fix-indentation-in-the-PCI-device-ID-defini.patch
 	patches.suse/usb-xhci-Limit-Stop-Endpoint-retries.patch
 	patches.suse/usb-xhci-Fix-TD-invalidation-under-pending-Set-TR-De.patch
+	patches.suse/usb-xhci-Avoid-queuing-redundant-Stop-Endpoint-comma.patch
 	patches.suse/usb-typec-ucsi-glink-fix-off-by-one-in-connector_sta.patch
 	patches.suse/usb-musb-Fix-hardware-lockup-on-first-Rx-endpoint-re.patch
 	patches.suse/usb-typec-fix-potential-array-underflow-in-ucsi_ccg_.patch
