usb: hub: Fix flushing of delayed work used for post resume purposes (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33361,6 +33361,7 @@
 	patches.suse/xhci-Disable-stream-for-xHC-controller-with-XHCI_BRO.patch
 	patches.suse/xhci-dbctty-disable-ECHO-flag-by-default.patch
 	patches.suse/xhci-dbc-Flush-queued-requests-before-stopping-dbc.patch
+	patches.suse/usb-hub-Fix-flushing-of-delayed-work-used-for-post-r.patch
 	patches.suse/platform-mellanox-mlxbf-tmfifo-fix-vring_desc.len-as.patch
 	patches.suse/platform-mellanox-mlxbf-pmc-Fix-duplicate-event-ID-f.patch
 	patches.suse/platform-mellanox-nvsw-sn2201-Fix-bus-number-in-adap.patch
