--- a/series.conf
+++ b/series.conf
@@ -34282,6 +34282,7 @@
 	patches.suse/fbcon-Fix-OOB-access-in-font-allocation.patch
 	patches.suse/i2c-riic-Allow-setting-frequencies-lower-than-50KHz.patch
 	patches.suse/writeback-Avoid-contention-on-wb-list_lock-when-swit.patch
+	patches.suse/writeback-Avoid-softlockup-when-switching-many-inode.patch
 	patches.suse/seccomp-Fix-a-race-with-WAIT_KILLABLE_RECV-if-the-tr.patch
 
 	########################################################
