--- a/series.conf
+++ b/series.conf
@@ -12096,6 +12096,7 @@
 	patches.suse/fs-proc-task_mmu-check-p-vec_buf-for-NULL.patch
 	patches.suse/i2c-riic-Allow-setting-frequencies-lower-than-50KHz.patch
 	patches.suse/writeback-Avoid-contention-on-wb-list_lock-when-swit.patch
+	patches.suse/writeback-Avoid-softlockup-when-switching-many-inode.patch
 	patches.suse/erofs-avoid-reading-more-for-fragment-maps.patch
 	patches.suse/seccomp-Fix-a-race-with-WAIT_KILLABLE_RECV-if-the-tracer-r.patch
 	patches.suse/arm64-map-_text-_stext-virtual-address-range-non-executabl.patch
