--- a/series.conf
+++ b/series.conf
@@ -34283,6 +34283,7 @@
 	patches.suse/i2c-riic-Allow-setting-frequencies-lower-than-50KHz.patch
 	patches.suse/writeback-Avoid-contention-on-wb-list_lock-when-swit.patch
 	patches.suse/writeback-Avoid-softlockup-when-switching-many-inode.patch
+	patches.suse/writeback-Avoid-excessively-long-inode-switching-tim.patch
 	patches.suse/seccomp-Fix-a-race-with-WAIT_KILLABLE_RECV-if-the-tr.patch
 
 	########################################################
