--- a/series.conf
+++ b/series.conf
@@ -55548,6 +55548,7 @@
 	########################################################
 
 	# x86
+	patches.suse/x86-kvm-Force-legacy-PCI-hole-to-UC-when-overriding-MTRRs-.patch
 
 	# s390x
 	patches.suse/s390-dasd-Fix-redundant-proc-dasd-entries-removal.patch
