--- a/series.conf
+++ b/series.conf
@@ -85,6 +85,7 @@
 	########################################################
 	patches.suse/firmware-qemu_fw_cfg-Do-not-hard-depend-on-CONFIG_HA.patch
 	patches.suse/docs-kdoc-handle-the-obsolescensce-of-docutils.Error.patch
+	patches.suse/Revert-crypto-testmgr-desupport-SHA-1-for-FIPS-140.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
