Revert "crypto: testmgr - desupport SHA-1 for FIPS 140" (bsc#1250804).

--- a/series.conf
+++ b/series.conf
@@ -98,6 +98,7 @@
 	patches.suse/firmware-qemu_fw_cfg-Do-not-hard-depend-on-CONFIG_HA.patch
 	patches.suse/Revert-fs-make-vfs_fileattr_-get-set-return-EOPNOTSU.patch
 	patches.suse/fs-return-EOPNOTSUPP-from-file_setattr-file_getattr-.patch
+	patches.suse/Revert-crypto-testmgr-desupport-SHA-1-for-FIPS-140.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
