writeback: Avoid contention on wb->list_lock when switching inodes (kABI fixup) (bsc#1237776).

--- a/series.conf
+++ b/series.conf
@@ -12658,6 +12658,7 @@
 	patches.kabi/kabi-hide-new-member-allow_subflows-in-struct-mptcp_.patch
 	patches.kabi/kabi-Restore-layout-of-parallel_data.patch
 	patches.kabi/HID-amd_sfh-Add-sync-across-amd-sfh-work-functions.patch
+	patches.kabi/writeback-Avoid-contention-on-wb-list_lock-when-swit.patch
 
 	########################################################
 	# preempt-rt backport converged
