--- a/series.conf
+++ b/series.conf
@@ -52058,6 +52058,7 @@
 	patches.suse/objtool-Fix-error-handling-inconsistencies-in-check.patch
 	patches.suse/sched-membarrier-Fix-redundant-load-of-membarrier_st.patch
 	patches.suse/x86-mm-Fix-flush_tlb_range-when-used-for-zapping-normal-PM.patch
+	patches.suse/x86-smp-Allow-calling-mwait_play_dead-with-an-arbitrary-hi.patch
 	patches.suse/x86-kaslr-Reduce-KASLR-entropy-on-most-x86-systems.patch
 	patches.suse/x86-speculation-Simplify-and-make-CALL_NOSPEC-consistent.patch
 	patches.suse/x86-speculation-Add-a-conditional-CS-prefix-to-CALL_NOSPEC.patch
