intel_idle: Provide the default enter_dead() handler (jsc#PED-13815).

--- a/series.conf
+++ b/series.conf
@@ -52060,6 +52060,7 @@
 	patches.suse/x86-mm-Fix-flush_tlb_range-when-used-for-zapping-normal-PM.patch
 	patches.suse/x86-smp-Allow-calling-mwait_play_dead-with-an-arbitrary-hi.patch
 	patches.suse/ACPI-processor_idle-Add-FFH-state-handling.patch
+	patches.suse/intel_idle-Provide-the-default-enter_dead-handler.patch
 	patches.suse/x86-kaslr-Reduce-KASLR-entropy-on-most-x86-systems.patch
 	patches.suse/x86-speculation-Simplify-and-make-CALL_NOSPEC-consistent.patch
 	patches.suse/x86-speculation-Add-a-conditional-CS-prefix-to-CALL_NOSPEC.patch
