--- a/series.conf
+++ b/series.conf
@@ -54161,6 +54161,7 @@
 	patches.suse/posix-cpu-timers-fix-race-between-handle_posix_cpu_timers-.patch
 	patches.suse/regulator-max20086-Fix-refcount-leak-in-max20086_par.patch
 	patches.suse/intel_idle-Use-subsys_initcall_sync-for-initialization.patch
+	patches.suse/x86-smp-PM-hibernate-Split-arch_resume_nosmt.patch
 	patches.suse/ACPI-CPPC-Fix-NULL-pointer-dereference-when-nosmp-is.patch
 	patches.suse/scsi-core-ufs-Fix-a-hang-in-the-error-handler.patch
 	patches.suse/scsi-iscsi-Fix-incorrect-error-path-labels-for-flashnode-o.patch
