ACPI: processor: Rescan "dead" SMT siblings during initialization (jsc#PED-13815).

--- a/series.conf
+++ b/series.conf
@@ -54162,6 +54162,7 @@
 	patches.suse/regulator-max20086-Fix-refcount-leak-in-max20086_par.patch
 	patches.suse/intel_idle-Use-subsys_initcall_sync-for-initialization.patch
 	patches.suse/x86-smp-PM-hibernate-Split-arch_resume_nosmt.patch
+	patches.suse/ACPI-processor-Rescan-dead-SMT-siblings-during-initializat.patch
 	patches.suse/ACPI-CPPC-Fix-NULL-pointer-dereference-when-nosmp-is.patch
 	patches.suse/scsi-core-ufs-Fix-a-hang-in-the-error-handler.patch
 	patches.suse/scsi-iscsi-Fix-incorrect-error-path-labels-for-flashnode-o.patch
