Reapply "x86/smp: Eliminate mwait_play_dead_cpuid_hint()" (jsc#PED-13815).

--- a/series.conf
+++ b/series.conf
@@ -54164,6 +54164,7 @@
 	patches.suse/x86-smp-PM-hibernate-Split-arch_resume_nosmt.patch
 	patches.suse/intel_idle-Rescan-dead-SMT-siblings-during-initialization.patch
 	patches.suse/ACPI-processor-Rescan-dead-SMT-siblings-during-initializat.patch
+	patches.suse/Reapply-x86-smp-Eliminate-mwait_play_dead_cpuid_hint.patch
 	patches.suse/ACPI-CPPC-Fix-NULL-pointer-dereference-when-nosmp-is.patch
 	patches.suse/scsi-core-ufs-Fix-a-hang-in-the-error-handler.patch
 	patches.suse/scsi-iscsi-Fix-incorrect-error-path-labels-for-flashnode-o.patch
