--- a/series.conf
+++ b/series.conf
@@ -34313,6 +34313,7 @@
 	patches.suse/ACPI-TAD-Add-missing-sysfs_remove_group-for-ACPI_TAD.patch
 	patches.suse/thermal-drivers-qcom-lmh-Add-missing-IRQ-includes.patch
 	patches.suse/soc-qcom-rpmh-rsc-Unconditionally-clear-_TRIGGER-bit.patch
+	patches.suse/firmware-meson_sm-fix-device-leak-at-probe.patch
 
 	########################################################
 	# end of sorted patches
