power: supply: max77976_charger: fix constant current reporting (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34295,6 +34295,7 @@
 	patches.suse/spi-cadence-quadspi-Flush-posted-register-writes-bef-1ad5576.patch
 	patches.suse/mfd-rz-mtu3-Fix-MTU5-NFCR-register-offset.patch
 	patches.suse/power-supply-cw2015-Fix-a-alignment-coding-style-iss.patch
+	patches.suse/power-supply-max77976_charger-fix-constant-current-r.patch
 
 	########################################################
 	# end of sorted patches
