spi: bcm2835: Remove redundant semicolons (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34289,6 +34289,7 @@
 	patches.suse/mfd-vexpress-sysreg-Check-the-return-value-of-devm_g.patch
 	patches.suse/regmap-Remove-superfluous-check-for-config-in-__regm.patch
 	patches.suse/regulator-scmi-Use-int-type-to-store-negative-error-.patch
+	patches.suse/spi-bcm2835-Remove-redundant-semicolons.patch
 
 	########################################################
 	# end of sorted patches
