i3c: Fix default I2C adapter timeout value (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34302,6 +34302,7 @@
 	patches.suse/pinctrl-renesas-Use-int-type-to-store-negative-error.patch
 	patches.suse/i2c-mediatek-fix-potential-incorrect-use-of-I2C_MAST.patch
 	patches.suse/i2c-designware-Add-disabling-clocks-when-probe-fails.patch
+	patches.suse/i3c-Fix-default-I2C-adapter-timeout-value.patch
 
 	########################################################
 	# end of sorted patches
