pinctrl: samsung: Drop unused S3C24xx driver data (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34298,6 +34298,7 @@
 	patches.suse/power-supply-max77976_charger-fix-constant-current-r.patch
 	patches.suse/pinctrl-equilibrium-Remove-redundant-semicolons.patch
 	patches.suse/pinctrl-meson-gxl-add-missing-i2c_d-pinmux.patch
+	patches.suse/pinctrl-samsung-Drop-unused-S3C24xx-driver-data.patch
 
 	########################################################
 	# end of sorted patches
