soc: qcom: rpmh-rsc: Unconditionally clear _TRIGGER bit for TCS (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34312,6 +34312,7 @@
 	patches.suse/ACPI-property-Fix-buffer-properties-extraction-for-s.patch
 	patches.suse/ACPI-TAD-Add-missing-sysfs_remove_group-for-ACPI_TAD.patch
 	patches.suse/thermal-drivers-qcom-lmh-Add-missing-IRQ-includes.patch
+	patches.suse/soc-qcom-rpmh-rsc-Unconditionally-clear-_TRIGGER-bit.patch
 
 	########################################################
 	# end of sorted patches
