ACPI: debug: fix signedness issues in read/write helpers (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34306,6 +34306,7 @@
 	patches.suse/i3c-master-svc-Recycle-unused-IBI-slot.patch
 	patches.suse/PM-devfreq-mtk-cci-Fix-potential-error-pointer-deref.patch
 	patches.suse/PM-sleep-core-Clear-power.must_resume-in-noirq-suspe.patch
+	patches.suse/ACPI-debug-fix-signedness-issues-in-read-write-helpe.patch
 
 	########################################################
 	# end of sorted patches
