spi: cadence-quadspi: Flush posted register writes before DAC access (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12014,6 +12014,7 @@
 	patches.suse/spi-bcm2835-Remove-redundant-semicolons.patch
 	patches.suse/spi-mtk-snfi-Remove-redundant-semicolons.patch
 	patches.suse/spi-cadence-quadspi-Flush-posted-register-writes-bef.patch
+	patches.suse/spi-cadence-quadspi-Flush-posted-register-writes-bef-1ad5576.patch
 
 	########################################################
 	# end of sorted patches
