pwm: tiehrpwm: Don't drop runtime PM reference in .free() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12004,6 +12004,7 @@
 	patches.suse/btrfs-return-any-hit-error-from-extent_writepage_io.patch
 	patches.suse/hwmon-mlxreg-fan-Separate-methods-of-fan-setting-com.patch
 	patches.suse/pwm-berlin-Fix-wrong-register-in-suspend-resume.patch
+	patches.suse/pwm-tiehrpwm-Don-t-drop-runtime-PM-reference-in-.fre.patch
 
 	########################################################
 	# end of sorted patches
