soc: mediatek: mtk-svs: fix device leaks on mt8192 probe failure (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12046,6 +12046,7 @@
 	patches.suse/soc-qcom-rpmh-rsc-Unconditionally-clear-_TRIGGER-bit.patch
 	patches.suse/firmware-arm_scmi-Mark-VirtIO-ready-before-registeri.patch
 	patches.suse/soc-mediatek-mtk-svs-fix-device-leaks-on-mt8183-prob.patch
+	patches.suse/soc-mediatek-mtk-svs-fix-device-leaks-on-mt8192-prob.patch
 
 	########################################################
 	# end of sorted patches
