PM / devfreq: rockchip-dfi: double count on RK3588 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12035,6 +12035,7 @@
 	patches.suse/i3c-master-svc-Use-manual-response-for-IBI-events.patch
 	patches.suse/i3c-master-svc-Recycle-unused-IBI-slot.patch
 	patches.suse/PM-devfreq-mtk-cci-Fix-potential-error-pointer-deref.patch
+	patches.suse/PM-devfreq-rockchip-dfi-double-count-on-RK3588.patch
 
 	########################################################
 	# end of sorted patches
