spi: fix return code when spi device has too many chipselects (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12016,6 +12016,7 @@
 	patches.suse/spi-cadence-quadspi-Flush-posted-register-writes-bef.patch
 	patches.suse/spi-cadence-quadspi-Flush-posted-register-writes-bef-1ad5576.patch
 	patches.suse/spi-cadence-quadspi-Fix-cqspi_setup_flash.patch
+	patches.suse/spi-fix-return-code-when-spi-device-has-too-many-chi.patch
 
 	########################################################
 	# end of sorted patches
