soc: mediatek: mtk-svs: fix device leaks on mt8183 probe failure (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12045,6 +12045,7 @@
 	patches.suse/thermal-drivers-qcom-lmh-Add-missing-IRQ-includes.patch
 	patches.suse/soc-qcom-rpmh-rsc-Unconditionally-clear-_TRIGGER-bit.patch
 	patches.suse/firmware-arm_scmi-Mark-VirtIO-ready-before-registeri.patch
+	patches.suse/soc-mediatek-mtk-svs-fix-device-leaks-on-mt8183-prob.patch
 
 	########################################################
 	# end of sorted patches
